# PackageGuard

./: .env.example  .gitignore  ASSETS.md  README.md  requirements.txt
bench/: ablation.py  aggregate.py  build_fake_db.py  elicit.py  honeypkg_demo.py  niche_prompts.json  plots.py  summarize.py  validate.py
bench/honeypkg/: README.md  pyproject.toml
bench/honeypkg/src/pybloomberg/: __init__.py
bench/honeypkg2/: LICENSE  README.md  pyproject.toml
bench/honeypkg2/src/canon_edsdk/: __init__.py
demo/: chat.py  proxy_demo.py  streamlit_app.py
demo/transcripts/: 20260618T143214_qwen2-5-coder-3b-instruct-q4-K.md  20260618T150402_qwen2-5-coder-3b-instruct-q4-K.md  20260618T150822_qwen2-5-coder-3b-instruct-q4-K.md  20260618T194347_qwen2-5-coder-3b-instruct-q4-K.md  20260618T194443_qwen2-5-coder-3b-instruct-q4-K.md
docs/: packageguard_workflow.html
packageguard/: __init__.py  extract.py  guard.py  llm_client.py  proxy.py
safeinstall/: __init__.py  __main__.py  cli.py
trust_engine/: __init__.py  cache.py  http.py  score.py  types.py
trust_engine/collectors/: __init__.py  codesearch.py  installscan.py  maintainer.py  nameanalysis.py  osv.py  registry.py  repo.py  selfcheck.py
trust_engine/data/: __init__.py  popular_pypi.json
